--- a/src/views/links/ClassByID.hbs
+++ b/src/views/links/ClassByID.hbs
@@ -1,5 +1,7 @@
 <head>
     <link rel="stylesheet" href="/css/AcademiasAll.css">
+  <script src="https://js.stripe.com/v3/"></script>
+
 </head>
 {{> navStudent}}
 
