--- a/src/views/links/UpdateAcademy.hbs
+++ b/src/views/links/UpdateAcademy.hbs
@@ -22,22 +22,7 @@
           />
         </div>
         <div class="row mt-4 ml-2">
-          <div class="col">
-            <h6>
-              <label>
-                Contacto
-              </label>
-            </h6>
-            <input
-              name="contact"
-              type="text"
-              class="form-control"
-              placeholder="Contacto"
-              value="Contacto"
-                required
-            />
-          </div>
-          <div class="col mr-4">
+          <div class="col ">
             <h6>
               <label>
                 Teléfono
@@ -53,7 +38,7 @@
             />
           </div>
         </div>
-        <div class="row mt-4 ml-4 mr-4">
+        <div class="row mt-4 ml-4 ">
           <h6>
             <label>
               Dirección
@@ -85,6 +70,7 @@
               required
           />
           <a class="btn btn-info text-light ml-4" href="/links/PanelAcademia">Cancelar</a>
+          <a class="btn btn-info text-light bg-danger ml-4" href="/links/DeleteAcademy">Eliminar cuenta</a>
         </div>
       </form>
     </div>
