--- a/src/views/links/index.hbs
+++ b/src/views/links/index.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Work+Sans:ital,wght@1,200&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,200&display=swap" rel="stylesheet"> 
 
 {{>indexnav}}
 
@@ -22,6 +22,15 @@
       <img src="/Resources/index-3.jpg" class="d-block w-100" alt="/Resources/index-1.jpg">
     </div>
   </div>
+</div>
+
+<div class="info">
+  <h1>Get Dance Now</h1>
+  <p>
+    GetDanceNow es una aplicación desarrollada con la finalidad de ayudar a los usuarios a ubicar academias que imparten clases
+    de bailes para así poder realizar un registro en dichas clases. Nuestro objetivo es ser la mejor aplicación referente a la
+    búsqueda de academias y poder crecer de manera potencial para que podamos incluir otras actividades o hobbies.
+    </p>
 </div>
 
 <div class="valores">
