--- a/src/views/partials/indexnav.hbs
+++ b/src/views/partials/indexnav.hbs
@@ -4,8 +4,8 @@
             <img src="../Resources/logo.png" style="width: 80px;" alt="logo_GetDanceNow">
         </a>
         <div class="option">
-            <a href="/signin">Sign in</a>
-            <a href="links/type">Sing up</a>
+            <a href="/signin">Iniciar sesiòn</a>
+            <a href="links/type">Registarte</a>
         </div>
     </div>
 </nav>
