--- a/src/public/css/panel.css
+++ b/src/public/css/panel.css
@@ -4,16 +4,43 @@
     box-sizing: border-box;
 }
 
+.scroll {
+    width: 20%;
+    height: 100px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    overflow: scroll;
+    display: inline-block;
+}
+
+.scroll-color-auto {
+    scrollbar-color: auto;
+}
+
+.scroll-color-dark {
+    scrollbar-color: dark;
+}
+
+.scroll-color-light {
+    scrollbar-color: light;
+}
+
+.scroll-color-colors {
+    scrollbar-color: orange rgba(0, 0, 0, 0);
+    scrollbar-width: thin;
+    scrollbar-base-color: black;
+}
+
 body {
     background: #f08621;
 }
 
 .contenedor {
     margin: 2rem auto;
-    border: 1px solid #aaa;
+    border: none;
     height: 200px;
     width: 90%;
-    max-width: 400px;
+    max-width: 300px;
     background: #f1f2f300;
     overflow: auto;
     box-sizing: border-box;
@@ -149,4 +176,43 @@ body {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
+}
+
+.target-statistics {
+    max-width: 70%;
+    margin: auto;
+    margin-top: 5%;
+}
+
+.table-info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+}
+
+.taget-info {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    font-family: 'PT Serif', serif;
+    font-size: 23px;
+    width: 100%;
+    color: white;
+}
+
+.taget-info .info {
+    display: flexbox;
+    text-align: end;
+    flex-direction: column;
+}
+
+p {
+    margin-bottom: 5px;
+}
+
+.type {
+    border-bottom: 3px solid #ccc !important;
+}
+
+.card-text {
+    border: none;
 }
