--- a/src/views/links/DeleteAcademy.hbs
+++ b/src/views/links/DeleteAcademy.hbs
@@ -11,10 +11,6 @@
                         </div>
 
                         <div class="row mt-4 ml-2">
-                            <div class="col">
-                                <h6><label>Contacto</label></h6>
-                                <input id="contact" type="text" class="form-control" placeholder="Contacto" value="Contacto" disabled>
-                            </div>
                             <div class="col mr-4">
                                 <h6><label>Teléfono</label></h6>
                                 <input id="number" type="text" class="form-control" placeholder="Teléfono" value="{{academy.numero}}" disabled>
@@ -32,38 +28,31 @@
                         <div class="row mt-2 ml-4 mr-4">
                             <textarea id="descripcion" cols="150" rows="4" disabled>{{academy.descripcion}} </textarea>
                         </div>
-
+                       
                         <div class="row mt-3 ml-4">
-                            <button type="button" class="btn-hover btn btn-danger color-8" data-toggle="modal" data-target="#myModal">Eliminar</button>
+                             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Eliminar
+                        </button>
                              <a class="btn btn-info text-light" href="/links/PanelAcademia">Cancelar</a>
-                            <!-- The Modal -->
-                            <div class="modal fade" id="myModal">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                    
-                                        <!-- Modal Header -->
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">¿Está seguro que desea eliminar la academia?</h4>
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        </div>
-                    
-                                        <!-- Modal body -->
-                                        <div class="modal-body">
-                                            Se perderán todos los datos y no podrán ser recuperados.
-                                        </div>
-                    
-                                        <!-- Modal footer -->
-                                        <div class="modal-footer">
-                    
-                                            <input type="submit" value="Eliminar" id="Delete" class="btn btn-danger" />
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                                        </div>
-                    
-                                    </div>
-                                </div>
-                            </div>
-                           
+
+                        <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">¿Está seguro que desea eliminar la academia?</h4>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
+                        <div class="modal-body">
+                            Se perderán todos los datos y no podrán ser recuperados.
+                        </div>
+                        <div class="modal-footer">
+                            <input type="submit" value="Eliminar" id="Delete" class="btn btn-danger" />
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
                     </form>
                 </div>
             </div>
