--- a/src/views/links/DeleteStudent.hbs
+++ b/src/views/links/DeleteStudent.hbs
@@ -2,11 +2,13 @@
     <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
 {{> navStudent}}
-<form method="POST" action="/links/DeleteStudent">
-    <h1 class="text-light text-center mt-4">Eliminar estudiante</h1>
-    <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
-        <div>
-
+<head>
+    <link rel="stylesheet" href="/css/RegisterStudent.css">
+</head>
+<h1 class="text-light text-center mt-4">Eliminar estudiante</h1>
+<div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+    <div>
+        <form method="POST" action="/links/DeleteStudent">
             <div class="row mt-4 ml-2">
                 <div class="col">
                     <h6><label>Nombre</label></h6>
