--- a/src/views/links/EstudiantePanel.hbs
+++ b/src/views/links/EstudiantePanel.hbs
@@ -18,7 +18,7 @@
 					</div>
 					<div class="shop-body">
 						<h3>Por ubicación</h3>
-						<a href="https://getdancenow.herokuapp.com/Map" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
+						<a href="/Map" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
 			</div>
