--- a/src/views/links/Map.hbs
+++ b/src/views/links/Map.hbs
@@ -4,51 +4,12 @@
 </div>
 
 
-
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-
+<script src="/js/studentsMap.js"></script>
 
 <script>
-    var map = L.map('map-template').setView([51.505, -0.09], 13);
-    var marker = L.marker([1000, 1000]);
-
-    var layer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-
-    function addMarker(ubication) {
-        const coords = [ubication.latlng.lat, ubication.latlng.lng];
-        marker.remove();
-        marker = L.marker(coords);
-        map.addLayer(marker);
-        map.panTo(coords);
-    }
-
-    let position = {
-        latlng: {
-            lat: 20.969547121724773,
-            lng: -89.5855236053467
-        }
-    }
-    let popup = L.marker(position.latlng).addTo(map)
-        .bindPopup("<b>Estas aquí</b><br />").openPopup();
-
-    map.panTo(position.latlng);
-    //map.addLayer(popup);
-
-    let coords;
-    
-     {{#each Academies}}
+    {{#each Academies}}
         coords = [{{longitud}} ,{{latitud}}];
-        map.addLayer(L.marker(coords));
+        createAcademyMarker(coords, '{{nombre}}');
     {{/each}}
-    
-
-    L.circle(position.latlng, 3500, {
-		color: 'red',
-		fillColor: '#f03',
-		fillOpacity: 0.1
-	}).addTo(map);
-
-
 </script>
